--- a/.gitignore
+++ b/.gitignore
@@ -106,8 +106,6 @@ dist
 # 编译生成
 dist
 
-# sessions
-session-store.db
-
 ##
-instantclient
+/lib/oracle/windows/instantclient/*
+/lib/oracle/linux/instantclient/*
