--- a/.npmignore
+++ b/.npmignore
@@ -106,9 +106,6 @@ dist
 # 编译生成
 dist
 
-# sessions
-session-store.db
-
 ##
-instantclient
-config/db.js
+/lib/oracle/windows/instantclient/*
+/lib/oracle/linux/instantclient/*
