--- a/package.json
+++ b/package.json
@@ -28,10 +28,9 @@
         "cross-env": "^7.0.3",
         "cross-spawn": "^7.0.3",
         "express": "^4.17.1",
-        "gulp": "^4.0.2",
+        "gulp-cli": "^2.3.0",
         "oracledb": "^5.1.0",
-        "pm2": "^4.5.4",
-        "source-map-support": "^0.5.19"
+        "pm2": "^4.5.4"
     },
     "devDependencies": {
         "@babel/core": "^7.9.0",
@@ -43,6 +42,7 @@
         "request": "^2.88.2",
         "source-map-loader": "^0.2.4",
         "uglifyjs-webpack-plugin": "^2.2.0",
+        "gulp": "^4.0.2",
         "webpack": "^4.42.1",
         "webpack-cli": "^3.3.11",
         "webpack-merge": "^4.2.2",
